---------------------------------------------------------------------------------------------------
Version: 3.1.3
Date: ????
  Bugfixes:
    - Fixed a crash when an item has a place result that isn't in the Recipe Book
    - Fixed the toggle quick ref button wouldn't be updated if it was in the stickied info GUI
---------------------------------------------------------------------------------------------------
Version: 3.1.2
Date: 2021-08-17
  Bugfixes:
    - Fixed a crash when a mod unlocks a research during config changed before Recipe Book does its own configuration changes
    - Fixed a crash when clicking the Factory Planner dimmer frame while an info GUI is stuck to search
    - Fixed that the search GUI would not be brought to the front when clicking the FP dimmer frame
---------------------------------------------------------------------------------------------------
Version: 3.1.1
Date: 2021-08-16
  Bugfixes:
    - Fixed a crash when joining a multiplayer game without changing your language
---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: 2021-08-16
  Features:
    - Added "compatible modules" to the crafter page (hidden by default, must be enabled in the page settings)
    - Added "burner machine" page
      - Burner machines are machines that consume fuel and aren't a crafter, lab, mining drill, or offshore pump
      - Some of these machines might get their own pages someday if enough relevant information is available for display
    - Added "burnt result" and "burnt result of" to the item page
  Gui:
    - When clicking a search result in the search GUI with the left mouse button, the info GUI will be "stickied" to the search GUI
      - A "detach" button will appear in the titlebar of the sticky window, allowing you to detach it
      - Middle-clicking something will open it in a standalone info GUI
      - This brings back a 2.0-esque experience for those who preferred it