@@ -3,6 +3,7 @@ Version: 3.1.3
 Date: ????
   Bugfixes:
     - Fixed a crash when an item has a place result that isn't in the Recipe Book
+    - Fixed navigation hotkeys not working if search was open
     - Fixed the toggle quick ref button wouldn't be updated if it was in the stickied info GUI
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.2
